<resources>
    <string name="app_name">ClassLib</string>
    <string name="isbn">ISBN</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="binding">Binding</string>
    <string name="length">Length</string>
    <string name="genre">Genre</string>
    <string name="count">Count</string>
    <string name="checkout">Checkout</string>
    <string name="student_id">Student ID</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="contactemail">Contact Email</string>
    <string name="contact">Contact</string>
    <string name="period">Period</string>
    <string name="default_stud_id">900000000</string>
    <string name="default_zero">0</string>
    <string name="sendReminder">Send Reminder to Student Via</string>
</resources>
